# learning-opengl

./: .gitignore  CMakeLists.txt  README.md
example-triangle/: CMakeLists.txt  example-triangle
example-triangle/src/shaders/: defaultshaders.cpp  shader.cpp
example-triangle/src/util/: assets.hpp  base.hpp
hello-triangle/: CMakeLists.txt
hello-triangle/src/: main.cpp
hello-triangle/src/util/: shaders.hpp  types.hpp
hello-window/: .CMakeLists.txt.swp  CMakeLists.txt  hello-window
hello-window/src/: main.cpp
shaders_uniform/: CMakeLists.txt
shaders_uniform/src/: main.cpp
shaders_uniform/src/shaders/: fragment_shader_yellow.glsl
shaders_uniform/src/util/: shaders.hpp
src/: main.cpp
src/shaders/: defaultfragmentshader.glsl  defaultshaders.hpp  defaultvertexshader.glsl  shader.hpp  shaderprogram.cpp  shaderprogram.hpp
src/util/: macros.hpp
